# dagster-pydantic

./: .gitignore  LICENSE  MANIFEST.in  README.md  justfile  pyproject.toml  setup.cfg  setup.py
dagster_pydantic/: __init__.py
dagster_pydantic_tests/: test_dagster_pydantic.py
my_dagster_project/: __init__.py  repository.py
